web: Prevent line breaks inside span.label

--- a/data/web/static/css/nonprint.css
+++ b/data/web/static/css/nonprint.css
@@ -64,6 +64,7 @@ span.label {
     border-radius: 1ex;
     padding-left: 1ex;
     padding-right: 1ex;
+    white-space: nowrap;
 }
 
 .callouttip > div {
